--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,107 @@
-jupyter-book
-matplotlib
-numpy
-ghp-import
+accessible-pygments==0.0.4
+alabaster==0.7.13
+appnope==0.1.3
+asttokens==2.4.0
+attrs==23.1.0
+Babel==2.13.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+comm==0.1.4
+contourpy==1.1.1
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
+docopt==0.6.2
+docutils==0.18.1
+executing==2.0.0
+fastjsonschema==2.18.1
+fonttools==4.43.1
+ghp-import==2.1.0
+greenlet==3.0.0
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+ipykernel==6.25.2
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter-book==0.15.1
+jupyter-cache==0.6.1
+jupyter_client==8.4.0
+jupyter_core==5.4.0
+kiwisolver==1.4.5
+latexcodec==2.0.1
+linkify-it-py==2.0.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.5
+mdurl==0.1.2
+myst-nb==0.17.2
+myst-parser==0.18.1
+nbclient==0.7.4
+nbformat==5.9.2
+nest-asyncio==1.5.8
+numpy==1.24.4
+packaging==23.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.1.0
+pipreqs==0.4.13
+pkgutil_resolve_name==1.3.10
+platformdirs==3.11.0
+prompt-toolkit==3.0.39
+psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pybtex==0.24.0
+pybtex-docutils==1.0.3
+pydata-sphinx-theme==0.14.1
+Pygments==2.16.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+referencing==0.30.2
+requests==2.31.0
+rpds-py==0.10.6
+six==1.16.0
+snowballstemmer==2.2.0
+soupsieve==2.5
+Sphinx==5.0.2
+sphinx-book-theme==1.0.1
+sphinx-comments==0.0.3
+sphinx-copybutton==0.5.2
+sphinx-jupyterbook-latex==0.5.2
+sphinx-multitoc-numbering==0.1.3
+sphinx-thebe==0.2.1
+sphinx-togglebutton==0.3.2
+sphinx_design==0.3.0
+sphinx_external_toc==0.3.1
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-bibtex==2.5.0
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==2.0.22
+stack-data==0.6.3
+tabulate==0.9.0
+tornado==6.3.3
+traitlets==5.11.2
+typing_extensions==4.8.0
+uc-micro-py==1.0.2
+urllib3==2.0.7
+wcwidth==0.2.8
+yarg==0.1.9
+zipp==3.17.0
