--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
+title: My Website
+author: dujjm
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
@@ -17,7 +17,7 @@ latex:
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
-  - references.bib
+  - content/references.bib
 
 # Information about where the book exists on the web
 repository:
