--- a/_toc.yml
+++ b/_toc.yml
@@ -2,8 +2,14 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
-chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+root: content/intro
+parts:
+  - caption: About me
+    chapters:
+    - file: content/aboutme
+  - caption: Photos
+    chapters:
+    - file: content/photos
+  - caption:  Work
+    chapters:
+    - file: content/projects
